# jni_frost_test

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
android_test_app/: build.gradle  settings.gradle
android_test_app/app/: build.gradle
android_test_app/app/src/androidTest/java/me/rahimklaber/frosttestapp/: ExampleInstrumentedTest.kt
android_test_app/app/src/main/: AndroidManifest.xml
android_test_app/app/src/main/java/me/rahimklaber/frosttestapp/: FrostApplication.kt  FrostViewModel.kt  MainActivity.kt  MainViewModel.kt  Overview.kt  SchnorrAgent.kt
android_test_app/app/src/main/java/me/rahimklaber/frosttestapp/database/: FrostDatabase.kt  MeDao.kt  ReceivedMessageDao.kt  RequestDao.kt  SentMessageDao.kt  spec.kt
android_test_app/app/src/main/java/me/rahimklaber/frosttestapp/hilt/: FrostManagerModule.kt
android_test_app/app/src/main/java/me/rahimklaber/frosttestapp/ipv8/: FrostCommunity.kt  FrostManager.kt
android_test_app/app/src/main/java/me/rahimklaber/frosttestapp/ipv8/message/: FrostMessage.kt  KeyGen.kt  ProposalStatus.kt  RequestToJoinMessage.kt  RequestToJoinResponseMessage.kt  Sign.kt
android_test_app/app/src/main/java/me/rahimklaber/frosttestapp/ui/: FrostSettings.kt
android_test_app/app/src/main/java/me/rahimklaber/frosttestapp/ui/make_proposal/: Propose.kt
android_test_app/app/src/main/java/me/rahimklaber/frosttestapp/ui/proposals/: Proposals.kt
android_test_app/app/src/main/java/me/rahimklaber/frosttestapp/ui/settings/: FrostGroupActivityGrid.kt  FrostSettings.kt
android_test_app/app/src/main/res/layout/: activity_main.xml  activity_overview.xml  fragment_frost_settings.xml
android_test_app/app/src/main/res/navigation/: mobile_navigation.xml
android_test_app/app/src/main/res/values/: strings.xml
android_test_app/app/src/test/java/me/rahimklaber/frosttestapp/: ExampleUnitTest.kt
android_test_app/app/src/test/kotlin/: MsgTest.kt  SchnorrAgentTest.kt
android_test_app/app/src/test/kotlin/android/util/: Log.kt
android_test_app/gradle/wrapper/: gradle-wrapper.properties
pc_test_code/src/main/kotlin/: SchnorrAgent.kt
rust_code/: Cargo.toml  build.rs
rust_code/src/: glue.in  java_glue.rs  lib.rs  test.rs
src/main/kotlin/: Main.kt
