[package]
name = "rust_code"
version = "0.1.0"
edition = "2021"

[lib]
name = "mobcore"
crate-type = ["cdylib"]

[features]
# If compiling on a system without OpenSSL installed, or cross-compiling for a different
# architecture, enable this feature to compile OpenSSL as part of the build.
# See https://docs.rs/openssl/#vendored for more.
static_ssl = ['openssl/vendored']

[dependencies]
dkg = {git="https://github.com/vrx00/serai", branch="bitcoin-processor"}
modular-frost = {git="https://github.com/vrx00/serai", branch="bitcoin-processor", features= ["secp256k1"]}
bitcoin-serai = {git="https://github.com/vrx00/serai", branch="bitcoin-processor"}
rand = "0.8.5"
group = "0.12"
k256 = { version = "0.11", features = ["arithmetic", "keccak256", "ecdsa"] }
secp256k1 = {version = "0.24.1", features = ["global-context", "rand-std"] }
sha2 = { version = "0.10" }
bitcoin={version="0.29.2",features = ["bitcoinconsensus"]}
hex="0.4.3"
rifgen = "0.1.61"
jni-sys = "0.3.0"
log = "0.4.6"
log-panics = "2.0"

[build-dependencies]
rifgen = "0.1.61"
flapigen = "0.6.0-pre9"

[dependencies.openssl]
optional = true